Sculpt Vertex Colors render as black color (when the Vertex Color node is used, Attribute node is fine) #78369

Closed
opened 2020-06-27 21:31:34 +02:00 by Ramil Roosileht · 8 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-26 17:24, hash: b7b57e7155
Worked: Never

Short description of error
Sculpt Vertex Colors show up in viewport, but turn black when rendered.

Exact steps for others to reproduce the error

  1. Launch Blender 2.90
  2. Pick sculpting template
  3. Paint Sculpt Vertex Color
  4. Assign material with Vertex Color node
  5. Switch to rendered mode, see that it displays fine
  6. Hit render, see black vertex color.

Sculpt Vertex Color Doesn't Render.mp4

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-26 17:24, hash: `b7b57e7155` Worked: Never **Short description of error** Sculpt Vertex Colors show up in viewport, but turn black when rendered. **Exact steps for others to reproduce the error** 1. Launch Blender 2.90 2. Pick sculpting template 3. Paint Sculpt Vertex Color 4. Assign material with Vertex Color node 5. Switch to rendered mode, see that it displays fine 6. Hit render, see black vertex color. [Sculpt Vertex Color Doesn't Render.mp4](https://archive.blender.org/developer/F8648036/Sculpt_Vertex_Color_Doesn_t_Render.mp4)
Author
Member

Added subscriber: @Limarest

Added subscriber: @Limarest
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, getting it through the Vertex Color node is very inreliable.

As a workaround, get the color through the Attribute node instead

Can confirm, getting it through the `Vertex Color` node is very inreliable. As a workaround, get the color through the `Attribute` node instead
Philipp Oeser changed title from Sculpt Vertex Colors render as black color to Sculpt Vertex Colors render as black color (when the Vertex Color node is used, Attribute node is fine) 2020-06-29 14:06:17 +02:00
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

#78225 (Viewport vertex color mode: now it uses only sculpt vertex colors, even if datablock do not exist) is related in a way, #78041 (Sculpt vertex color improvements for 2.91) is also mentioning the rendering support

rendering sculpt vertex colors in Vertex Color and Attribute nodes. There is a button to convert to legacy colors, but this is not good enough

So maybe it is not neccessary to keep this open, but will @PabloDobarro decide...

#78225 (Viewport vertex color mode: now it uses only sculpt vertex colors, even if datablock do not exist) is related in a way, #78041 (Sculpt vertex color improvements for 2.91) is also mentioning the rendering support > rendering sculpt vertex colors in Vertex Color and Attribute nodes. There is a button to convert to legacy colors, but this is not good enough So maybe it is not neccessary to keep this open, but will @PabloDobarro decide...

This issue was referenced by f1104c2828

This issue was referenced by f1104c2828868b8ffd6135671f2ff3926365813a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-07-15 18:56:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78369
No description provided.